--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -16,6 +16,32 @@
  keywords = {concurrency, monitoring, race, threading},
 } 
 
+
+
+@inproceedings{DBLP:conf/IEEEpact/DrebesPH0D16,
+  author    = {Andi Drebes and
+               Antoniu Pop and
+               Karine Heydemann and
+               Albert Cohen and
+               Nathalie Drach},
+  editor    = {Ayal Zaks and
+               Bilha Mendelson and
+               Lawrence Rauchwerger and
+               Wen{-}mei W. Hwu},
+  title     = {Scalable Task Parallelism for {NUMA:} {A} Uniform Abstraction for
+               Coordinated Scheduling and Memory Management},
+  booktitle = {Proceedings of the 2016 International Conference on Parallel Architectures
+               and Compilation, {PACT} 2016, Haifa, Israel, September 11-15, 2016},
+  pages     = {125--137},
+  publisher = {{ACM}},
+  year      = {2016},
+  url       = {https://doi.org/10.1145/2967938.2967946},
+  doi       = {10.1145/2967938.2967946},
+  timestamp = {Wed, 16 Oct 2019 14:14:52 +0200},
+  biburl    = {https://dblp.org/rec/conf/IEEEpact/DrebesPH0D16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{DBLP:conf/cgo/ZengR0AJ014,
   author    = {Qiang Zeng and
                Junghwan Rhee and
@@ -1350,6 +1376,16 @@ keywords = {scheduling, data placement, NUMA}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{hanson1980portable,
+  title={A portable storage management system for the Icon programming language},
+  author={Hanson, David R},
+  journal={Software: Practice and Experience},
+  volume={10},
+  number={6},
+  pages={489--500},
+  year={1980},
+  publisher={Wiley Online Library}
+}
 
 @misc{hugepages,
   author = {Mel Gorman},
@@ -1357,6 +1393,21 @@ keywords = {scheduling, data placement, NUMA}
   howpublished = {"\url{https://lwn.net/Articles/374424/}"},
   year={2010}
 }
+
+@inproceedings{Cling,
+  author    = {Periklis Akritidis},
+  title     = {Cling: {A} Memory Allocator to Mitigate Dangling Pointers},
+  booktitle = {19th {USENIX} Security Symposium, Washington, DC, USA, August 11-13,
+               2010, Proceedings},
+  pages     = {177--192},
+  publisher = {{USENIX} Association},
+  year      = {2010},
+  url       = {http://www.usenix.org/events/sec10/tech/full\_papers/Akritidis.pdf},
+  timestamp = {Thu, 12 Mar 2020 11:34:57 +0100},
+  biburl    = {https://dblp.org/rec/conf/uss/Akritidis10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 
 @misc{AutoNUMA,
  author = {Jonathan Corbet}, 
